--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,7 +1,27 @@
+@import 'base/variables';
+@import 'base/mixins';
+@import 'base/animation';
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     text-decoration: none;
+    color: $main-color;
     font-family: "Plus Jakarta Sans", sans-serif;
 }
+
+@import 'blocks/btn';
+@import 'blocks/label';
+
+@import 'blocks/header';
+@import 'blocks/promo';
+@import 'blocks/showcase';
+@import 'blocks/about';
+@import 'blocks/explain';
+@import 'blocks/services';
+@import 'blocks/process';
+@import 'blocks/portfolio';
+@import 'blocks/reviews';
+@import 'blocks/contact';
+@import 'blocks/footer';
