--- a/src/scss/blocks/_about.scss
+++ b/src/scss/blocks/_about.scss
@@ -1,4 +1,5 @@
 .about {
+    width: 100%;
     min-height: 1100px;
     background: #f5f5f5;
     position: relative;
@@ -18,6 +19,7 @@
         line-height: 110%;
         letter-spacing: -0.01em;
         color: $main-color;
+        text-align: center;
         position: relative;
         border-top: 1px solid $main-color;
         border-bottom: 1px solid $main-color;
@@ -27,11 +29,11 @@
             &::after {
                 content: '';
                 display: block;
-                width: 312px;
-                height: 140px;
-                background: url(../img/red-vector.svg);
+                width: 115%;
+                height: 100%;
+                background: url(../img/red-vector.svg) center center/contain no-repeat;
                 position: absolute;
-                top: 25px;
+                top: 12px;
                 left: -20px;
                 z-index: -1;
             }
@@ -65,9 +67,166 @@
         font-size: 24px;
         line-height: 140%;
         color: $main-color;
+        position: relative;
     }
 
     &__btn {
-        margin-top: 80px;
+        position: absolute;
+        bottom: 0;
+        left: 0;
+    }
+}
+
+@media (max-width: 1600px) {
+    .about {
+        min-height: 740px;
+
+        &__title {
+            font-size: 100px;
+            margin-bottom: 60px;
+            padding: 10px 0;
+            span {
+                &::after {
+                    top: 5px;
+                    left: -9px;
+                }
+            }
+        }
+
+        &__wrapper {
+            width: 80%;
+            grid-row-gap: 0;
+
+        }
+
+        &__subtitle {
+            font-size: 55px;
+        }
+    }
+}
+
+@media (max-width: 1439px) {
+    .about {
+        &__title {
+            font-size: 90px;
+            padding: 20px 0;
+        }
+
+        &__wrapper {
+            grid-template-columns: repeat(2, 1fr);
+            grid-row-gap: 0;
+            overflow: hidden;
+        }
+    }
+}
+
+@media (max-width: 1279px) {
+    .about {
+        &__wrapper {
+            grid-template-columns: repeat(2, 1fr);
+            grid-column-gap: 0px;
+            grid-row-gap: 60px;
+        }
+
+        &__title {
+            font-size: 65px;
+        }
+
+        &__subtitle {
+            font-size: 52px;
+        }
+
+        &__text {
+            font-size: 22px;
+        }
+    }
+}
+
+@media (max-width: 960px) {
+    .about {
+        min-height: 730px;
+
+        &__wrapper {
+            float: initial;
+            margin: 0 auto;
+        }
+
+        &__subtitle {
+            font-size: 40px;
+            text-align: center;
+            span {
+                float: initial;
+                text-align: center;
+            }
+        }
+
+        &__text {
+            font-size: 18px;
+        }
+
+        &__label {
+            display: none;
+        }
+    }
+}
+
+@media (max-width: 768px) {
+    .about {
+        padding: 20px 0 40px 0;
+        min-height: initial;
+
+        &__title {
+            font-size: 58px;
+            margin-bottom: 15px;
+            br {
+                display: none;
+            }
+        }
+
+        &__subtitle {
+            font-size: 35px;
+        }
+
+        &__wrapper {
+            display: flex;
+            flex-direction: column;
+            gap: 30px;
+        }
+
+        &__text {
+            &:nth-child(2) {
+                order: 4;
+            }
+        }
+
+        &__btn {
+            position: relative;
+            margin-top: 30px;
+        }
+    }
+}
+
+@media (max-width: 480px) {
+    .about {
+        &__title {
+            font-size: 40px;
+        }
+
+        &__wrapper {
+            width: 100%;
+        }
+
+        &__subtitle {
+            font-size: 30px;
+        }
+
+        &__text {
+            text-align: center;
+        }
+
+        &__btn {
+            margin: 0 auto;
+            margin-top: 30px;
+        }
     }
 }
