--- a/src/scss/blocks/_contact.scss
+++ b/src/scss/blocks/_contact.scss
@@ -37,7 +37,7 @@
                 display: block;
                 width: 125%;
                 height: 110%;
-                background: url(../img/red-vector3.svg) no-repeat;
+                background: url(../img/red-vector3.svg) center center/contain no-repeat;
                 position: absolute;
                 top: 16px;
                 left: -28px;
@@ -87,7 +87,7 @@
 
     &__label {
         &::before {
-            background: url(../img/icons/star3.svg);
+            background: url(../img/icons/star3.svg) center center/contain no-repeat;
         }
     }
 
@@ -96,5 +96,117 @@
         position: absolute;
         bottom: -30px;
         left: 10%;
+        animation: inputError .5s ease forwards;
+    }
+}
+
+@media (max-width: 1600px) {
+    .contact {
+        &__container {
+            gap: 20px;
+        }
+
+        &__block {
+            width: 50%;
+        }
+
+        &__img {
+            height: 100%;
+        }
+
+        &__title {
+            font-size: 60px;
+            margin-top: 90px;
+        }
+
+        &__text {
+            margin-bottom: 90px;
+        }
+
+        &__input {
+            padding: 8px 52% 8px 32px;
+        }
+    }
+}
+
+@media (max-width: 1439px) {
+    .contact {
+        &__title {
+            &_vector {
+                &::before {
+                    width: 115%;
+                    top: 4px;
+                    left: -9px;
+                }
+            }
+        }
+    }
+}
+
+@media (max-width: 1279px) {
+    .contact {
+        padding: 60px 0;
+        &__title {
+            text-align: center;
+        }
+        &__block {
+            justify-content: initial;
+            gap: 40px;
+            &:first-child {
+                height: initial;
+            }
+            &:last-child {
+                display: none;
+            }
+        }
+    }
+}
+
+@media (max-width: 768px) {
+    .contact {
+        &__title {
+            font-size: 40px;
+            margin-top: 64px;
+        }
+
+        &__text {
+            font-size: 18px;
+        }
+
+        &__form {
+            margin-bottom: 90px;
+        }
+
+        &__input {
+            padding: 8px 32px;
+        }
+
+        &__btn {
+            top: 110px;
+            right: 50%;
+            transform: translateX(50%);
+        }
+
+        &__msg {
+            width: 238px;
+            top: 80px;
+            left: 50%;
+            transform: translateX(-50%);
+        }
+    }
+}
+
+@media (max-width: 480px) {
+    .contact {
+        &__container {
+            width: 100%;
+            padding: 48px 20px;
+        }
+        &__title {
+            font-size: 35px;
+        }
+        &__block {
+            width: 100%;
+        }
     }
 }
