--- a/src/scss/blocks/_explain.scss
+++ b/src/scss/blocks/_explain.scss
@@ -1,4 +1,5 @@
 .explain {
+    width: 100%;
     min-height: 1588px;
     padding: 114px 0 0 0;
     position: relative;
@@ -7,12 +8,12 @@
         display: flex;
         flex-direction: column;
         &::before {
-            background: url(../img/icons/circle.svg);
+            background: url(../img/icons/circle.svg) center center/contain no-repeat;
         }
     }
 
     &__title {
-        width: 60%;
+        width: 1140px;
         margin: 0 auto;
         margin-top: 80px;
         font-weight: 400;
@@ -31,7 +32,7 @@
                 display: block;
                 width: 120%;
                 height: 110%;
-                background: url(../img/red-vector2.svg) no-repeat;
+                background: url(../img/red-vector2.svg) center center/contain no-repeat;
                 position: absolute;
                 top: 8px;
                 left: -20px;
@@ -42,8 +43,74 @@
 
     &__bg {
         width: 100%;
+        height: 59%;
         position: absolute;
         bottom: 0;
         z-index: -1;
+        object-fit: cover;
+    }
+}
+
+@media (max-width: 1600px) {
+    .explain {
+        padding: 60px 0 0 0;
+        min-height: 1260px;
+        &__title {
+            margin-top: 40px;
+        }
+    }
+}
+
+@media (max-width: 1439px) {
+
+}
+
+@media (max-width: 1279px) {
+    .explain {
+        min-height: 1010px;
+        &__title {
+            width: 80%;
+            font-size: 66px;
+            &_vector {
+                &:after {
+                    width: 110%;
+                    top: 3px;
+                    left: -7px;
+                }
+            }
+        }
+    }
+}
+
+@media (max-width: 960px) {
+    .explain {
+        min-height: 875px;
+        &__title {
+            font-size: 53px;
+        }
+    }
+}
+
+@media (max-width: 768px) {
+    .explain {
+        min-height: 630px;
+        &__title {
+            font-size: 34px;
+        }
+
+        &__bg {
+            height: 50%;
+        }
+    }
+}
+
+@media (max-width: 480px) {
+    .explain {
+        padding: 30px 0 0 0;
+        min-height: 570px;
+        &__title {
+            width: 90%;
+            font-size: 25px;
+        }
     }
 }
