--- a/src/scss/blocks/_header.scss
+++ b/src/scss/blocks/_header.scss
@@ -13,6 +13,9 @@
         line-height: 110%;
         letter-spacing: -0.05em;
         color: $main-color;
+        &_nav {
+            display: none;
+        }
     }
 
     &__nav {
@@ -58,5 +61,93 @@
         left: -50px;
         top: 50%;
         transform: translateY(-50%);
+    }
+
+    &__hamburger {
+        display: none;
+        z-index: 30;
+        span {
+            background-color: $main-color;
+            display: block;
+            height: 2px;
+            margin: 0 auto 4px;
+            transition: all .8s;
+            width: 26px;
+        }
+        &_active {
+            margin-bottom: 10px;
+            span {
+                margin-bottom: -2px;
+                &:nth-child(1) {
+                    transform: translateY(3px) rotate(-45deg);
+                }
+                &:nth-child(2) {
+                    transition: .2s all;
+                    height: 0;
+                    width: 0;
+                }
+                &:nth-child(3) {
+                    transform: translateY(3px) rotate(45deg);
+                }
+            }
+        }
+    }
+}
+
+@media (max-width: 1279px) {
+    .header {
+        padding: 0 8%;
+        &__buttons {
+            display: none;
+        }
+    }
+}
+
+@media (max-width: 768px) {
+    .header {
+        position: relative;
+
+        &__logo {
+            &_nav {
+                display: block;
+            }
+        }
+
+        &__nav {
+            width: 60%;
+            height: 100vh;
+            position: absolute;
+            top: 0;
+            left: -100%;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            gap: 60px;
+            background: #f5f5f5;
+            transition: 1s all;
+            z-index: 25;
+            &_active {
+                left: 0;
+                box-shadow: 10px 0px 20px 0px #1d201f;
+            }
+        }
+
+        &__link {
+            height: 50px;
+            display: flex;
+            align-items: center;
+        }
+        
+        &__hamburger {
+            display: block;
+        }
+    }
+}
+
+@media (max-width: 480px) {
+    .header {
+        &__nav {
+            width: 100%;
+        }
     }
 }
