--- a/src/scss/blocks/_label.scss
+++ b/src/scss/blocks/_label.scss
@@ -11,6 +11,6 @@
         display: block;
         width: 12px;
         height: 12px;
-        background: url(../img/icons/sqaure.svg);
+        background: url(../img/icons/sqaure.svg) center center/contain no-repeat;
     }
 }
