--- a/src/scss/blocks/_portfolio.scss
+++ b/src/scss/blocks/_portfolio.scss
@@ -12,12 +12,11 @@
         display: flex;
         justify-content: space-between;
         position: relative;
-    }
-
-    &__big-block:first-child {
-        display: grid;
-        grid-template-columns: auto;
-        grid-template-rows: auto;
+        &:first-child {
+            display: grid;
+            grid-template-columns: auto;
+            grid-template-rows: auto;
+        }
     }
 
     &__title-block {
@@ -38,6 +37,7 @@
     &__item {
         display: flex;
         flex-direction: column;
+        align-items: center;
         gap: 1rem;
         &:hover {
             .portfolio__img {
@@ -49,6 +49,8 @@
     }
 
     &__img {
+        width: 95%;
+        height: 100%;
         overflow: hidden;
         border-radius: 8px;
         img {
@@ -77,7 +79,7 @@
 
     &__label {
         &::before {
-            background: url(../img/icons/star.svg);
+            background: url(../img/icons/star.svg) center center/contain no-repeat;
         }
     }
 
@@ -119,4 +121,145 @@
 
 #portfolioWork5 {
     align-self: flex-start;
+}
+
+@media (max-width: 1600px) {
+    .portfolio {
+        &__title {
+            width: 100%;
+            font-size: 70px;
+        }
+        &__big-block {
+            &:first-child {
+                gap: 50px;
+            }
+        }
+    }
+}
+
+@media (max-width: 1439px) {
+    .portfolio {
+        &__container {
+            overflow: hidden;
+        }
+    }
+}
+
+@media (max-width: 1279px) {
+    .portfolio {
+        &__container {
+            padding: 60px 0 160px 0;
+            gap: 60px;
+        }
+
+        &__label {
+            align-self: center;
+        }
+
+        &__title {
+            text-align: center;
+            font-size: 65px;
+        }
+
+        &__big-block {
+            &:first-child {
+                grid-template-columns: repeat(2, 1fr);
+                grid-column-gap: 30px;
+                grid-row-gap: 30px;
+            }
+        }
+
+        &__item {
+            width: 100%;
+        }
+
+        &__title-block {
+            grid-area: 1 / 1 / 2 / 3;
+            gap: 30px;
+        }
+
+        &__more {
+            border-top: 0;
+            left: 50%;
+            transform: translateX(-50%);
+            bottom: -170px;
+        }
+
+        &__more-descr {
+            display: none;
+        }
+    }
+
+    #portfolioWork1 {
+        grid-area: 2 / 1 / 3 / 2;
+        margin-bottom: 0;
+        .portfolio__img {
+            height: 532px;
+        }
+    }
+
+    #portfolioWork2 {
+        grid-area: 2 / 2 / 3 / 3;
+        align-self: initial;
+    }
+}
+
+@media (max-width: 960px) {
+
+}
+
+@media (max-width: 768px) {
+    .portfolio {
+        &__title {
+            font-size: 50px;
+        }
+
+        &__big-block {
+            gap: 30px;
+            &:last-child {
+                flex-direction: column;
+                gap: 40px;
+            }
+        }
+
+        &__img {
+            height: 230px;
+        }
+    }
+
+    #portfolioWork1 {
+        .portfolio__img {
+            height: 230px;
+        }
+    }
+}
+
+@media (max-width: 480px) {
+    .portfolio {
+        &__title {
+            font-size: 32px;
+        }
+
+        &__label {
+            font-size: 12px;
+        }
+
+        &__big-block {
+            flex-direction: column;
+            gap: 40px;
+            &:first-child {
+                grid-template-columns: 1fr;
+                grid-column-gap: 0px;
+                grid-row-gap: 40px;
+            }
+        }
+    }
+
+    #portfolioWork1 {
+        grid-area: 2 / 1 / 3 / 2;
+    }
+
+    #portfolioWork2 {
+        grid-area: 3 / 1 / 4 / 2;
+    }
 }
