--- a/src/scss/blocks/_showcase.scss
+++ b/src/scss/blocks/_showcase.scss
@@ -6,7 +6,7 @@
     &__cloud {
         width: 100%;
         height: 377px;
-        background: url(../img/showcase/white-cloud.svg);
+        background: url(../img/showcase/white-cloud.svg) center center/contain no-repeat;
         position: absolute;
         top: 114px;
     }
@@ -61,6 +61,7 @@
         height: 100%;
         border-radius: 8px;
         transition: 2s all;
+        object-fit: cover;
     }
 
     &__img-hover {
@@ -77,8 +78,6 @@
         top: 32px;
         border-radius: 48px;
         padding: 2px 8px;
-        width: 87px;
-        height: 26px;
         background: #fff;
         font-weight: 500;
         font-size: 16px;
@@ -90,7 +89,8 @@
     &__text-block {
         margin-top: 16px;
         display: flex;
-        gap: 385px;
+        justify-content: space-between;
+        align-items: center;
     }
 
     &__text {
@@ -109,11 +109,111 @@
                 display: block;
                 width: 12px;
                 height: 12px;
-                background: url(../img/icons/star.svg);
+                background: url(../img/icons/star.svg) center center/contain no-repeat;
             }
         }
         &:last-child {
             margin-left: 75px;
+        }
+    }
+}
+
+@media (max-width: 1279px) {
+    .showcase {
+        &__container {
+            padding: 5% 0;
+        }
+
+        &__img-block {
+            height: auto;
+            &::before, &::after {
+                font-size: 100px;
+            }
+        }
+
+        &__img, &__img-hover {
+            height: 60%;
+        }
+
+        &__cloud {
+            top: initial;
+        }
+    }
+}
+
+@media (max-width: 960px) {
+    .showcase {
+        &__img-block {
+            height: auto;
+            &::before, &::after {
+                font-size: 80px;
+                bottom: 40%;
+            }
+        }
+
+        &__img {
+            filter: blur(15px);
+        }
+
+        &__img-hover {
+            bottom: 50%;
+            transform: translate(-50%, 50%);
+        }
+
+        &__cloud {
+            display: none;
+        }
+
+        &__text {
+            font-size: 15px;
+            &:last-child {
+                margin-left: 0;
+            }
+        }
+    }
+}
+
+@media (max-width: 768px) {
+    .showcase {
+        &__mark {
+            left: 16px;
+            top: 16px;
+        }
+
+        &__img-block {
+            &::before, &::after {
+                font-size: 50px;
+            }
+        }
+
+        &__text-block {
+            flex-direction: column;
+            gap: 16px;
+        }
+
+        &__text {
+            text-align: center;
+            align-self: flex-start;
+            &:nth-child(2) {
+                align-self: center;
+            }
+            &:last-child {
+                align-self: flex-end;
+            }
+        }
+    }
+}
+
+@media (max-width: 480px) {
+    .showcase {
+        &__mark {
+            font-size: 10px;
+        }
+
+        &__img-block {
+            &::before, &::after {
+                font-size: 35px;
+            }
         }
     }
 }
